--- a/2023/aoc_ocaml/bin/dune
+++ b/2023/aoc_ocaml/bin/dune
@@ -1,4 +1,7 @@
 (executables
- (public_names d01 d02 d03 d04 d05 d06 d07 d08 d09 d10 d11 d12 d13 d14 d15 d16 d17 d18 d19 d20)
- (names d01 d02 d03 d04 d05 d06 d07 d08 d09 d10 d11 d12 d13 d14 d15 d16 d17 d18 d19 d20)
- (libraries AOC fmt core_kernel.pairing_heap))
+ (public_names d01 d02 d03 d04 d05 d06 d07 d08 d09 d10 d11 d12 d13 d14 d15 d16 d17 d18 d19 d20 d21)
+ (names d01 d02 d03 d04 d05 d06 d07 d08 d09 d10 d11 d12 d13 d14 d15 d16 d17 d18 d19 d20 d21)
+ (libraries AOC fmt core_kernel.pairing_heap)
+ (preprocess
+  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq ppx_sexp_conv))
+ )
