--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,7 @@
   "name": "aoc", 
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
-    "ghcr.io/devcontainers-contrib/features/ocaml-asdf:2": {}
+    "ghcr.io/devcontainers-contrib/features/ocaml-asdf:2": {},
+    "ghcr.io/devcontainers-contrib/features/opam-asdf:2": {}
   }
 }
