--- a/2024/aoc_ocaml/bin/dune
+++ b/2024/aoc_ocaml/bin/dune
@@ -1,5 +1,5 @@
 (executables
- (public_names d01 d02 d03 d04 d05 d06 d06b)
- (names d01 d02 d03 d04 d05 d06 d06b)
+ (public_names d01 d02 d03 d04 d05 d06 d07)
+ (names d01 d02 d03 d04 d05 d06 d07)
  (libraries AOC base fmt domainslib)
  (modes (byte exe) (native shared_object)))
